Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39253

nmake install does not install release pdb files of static libraries to prefix location

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.1
    • 5.3.0
    • Build tools: qmake
    • None
    • 08a7828429edcb597aaaaf2e495b4d2a77cd64cc

    Description

      i have configured and built qt-5.3.0 as static libraries via

      -developer-build -opengl desktop -no-angle -static -force-debug-info -skip qtwebkit -skip qtwebkit-examples -nomake examples -nomake tests -prefix %cd%\..\msvc2013-static-64
      

      doing so, the generated file tree only contains pdb files for the executables in /bin, but the pdb files for the libraries are missing. thes seems to be related do QTBUG-32412.

      Attachments

        For Gerrit Dashboard: QTBUG-39253
        # Subject Branch Project Status CR V

        Activity

          People

            buddenha Oswald Buddenhagen
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes